salesforce/main/default/objects/FundOps_Signal__c/FundOps_Signal__c.object-meta.xml
<CustomObject>
    <label>FundOps Signal</label>
    <nameField>
        <displayFormat>FS-{00000}</displayFormat>
        <label>FundOps Signal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FundOps Signals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>