salesforce/main/default/objects/FundOps_Signal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FundOps Signals</relationshipLabel>
    <relationshipName>FundOpsSignals</relationshipName>
    <type>Lookup</type>
</CustomField>