salesforce/main/default/objects/FundOps_Signal__c/fields/Confidence__c.field-meta.xml
<CustomField>
  <fullName>Confidence__c</fullName>
  <label>Confidence</label>
  <precision>3</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>