salesforce/main/default/objects/FundOps_Signal__c/fields/Contact__c.field-meta.xml
<CustomField>
  <fullName>Contact__c</fullName>
  <label>Contact</label>
  <type>Lookup</type><referenceTo>Contact</referenceTo><relationshipName>FundOpsSignalContacts</relationshipName>
</CustomField>