salesforce/main/default/objects/FundOps_Signal__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <label>Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>