salesforce/main/default/objects/FundOps_Signal__c/fields/External_ID__c.field-meta.xml
<CustomField>
  <fullName>External_ID__c</fullName>
  <externalId>true</externalId>
  <label>External ID</label>
  <length>255</length>
  <type>Text</type>
  <unique>true</unique>
</CustomField>