salesforce/main/default/objects/FundOps_Signal__c/fields/FundOps_External_Id__c.field-meta.xml
<CustomField>
    <externalId>true</externalId>
    <label>FundOps External Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>