salesforce/main/default/objects/FundOps_Signal__c/fields/Observation_Type__c.field-meta.xml
<CustomField>
  <fullName>Observation_Type__c</fullName>
  <label>Observation Type</label>
  <type>Picklist</type>
  <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Observed</fullName><default>true</default></value><value><fullName>Inferred</fullName><default>false</default></value></valueSetDefinition></valueSet>
</CustomField>