salesforce/main/default/objects/FundOps_Signal__c/fields/Opportunity__c.field-meta.xml
<CustomField>
  <fullName>Opportunity__c</fullName>
  <label>Opportunity</label>
  <type>Lookup</type><referenceTo>Opportunity</referenceTo><relationshipName>FundOpsSignalOpportunities</relationshipName>
</CustomField>