salesforce/main/default/objects/FundOps_Signal__c/fields/Program__c.field-meta.xml
<CustomField>
  <fullName>Program__c</fullName>
  <label>Program</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Believe in Me</fullName><default>false</default></value>
      <value><fullName>Cougs 4 Kids</fullName><default>false</default></value>
      <value><fullName>iLevelUP</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>