salesforce/main/default/objects/FundOps_Signal__c/fields/Raw_Hash__c.field-meta.xml
<CustomField>
  <fullName>Raw_Hash__c</fullName>
  <label>Raw Hash</label>
  <length>64</length>
  <type>Text</type>
</CustomField>