salesforce/main/default/objects/FundOps_Signal__c/fields/Score_Contribution__c.field-meta.xml
<CustomField>
    <label>Score Contribution</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>