salesforce/main/default/objects/FundOps_Signal__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <label>Signal Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>