salesforce/main/default/objects/FundOps_Signal__c/fields/Source_Name__c.field-meta.xml
<CustomField>
  <fullName>Source_Name__c</fullName>
  <label>Source Name</label>
  <length>255</length>
  <type>Text</type>
</CustomField>