salesforce/main/default/objects/FundOps_Signal__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <label>Source System</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>