salesforce/main/default/objects/FundOps_Signal__c/fields/Source_URL__c.field-meta.xml
<CustomField>
    <label>Source URL</label>
    <type>Url</type>
</CustomField>