salesforce/main/default/objects/FundOps_Signal__c/fields/Summary__c.field-meta.xml
<CustomField>
  <fullName>Summary__c</fullName>
  <label>Summary</label>
  <length>32768</length>
  <type>LongTextArea</type>
</CustomField>